--- a/pages/ourstory.html
+++ b/pages/ourstory.html
@@ -179,6 +179,7 @@
                       </ul>
                       <div class="grid_12">
         </div>
+      </div>
         <div class="clear"></div>
         <div class="bottom_block">
           <div class="grid_6">
